Changed  construct_composit to use pandas routines to find components. Now much faster. ~2s on one million obs.
There are some print statements to take a look at duplicate observations.
See
https://github.com/NCAR/pyDARTdiags/issues/10#issuecomment-2260790087
or discussion.

added another composite type (need a list of all of these)

--- a/src/obs_sequence/composite_types.yaml
+++ b/src/obs_sequence/composite_types.yaml
@@ -27,3 +27,9 @@ aircraft_horizontal_wind:
   components:
     - 10m_u_wind_component
     - 10m_v_wind_component
+
+marine_sfc_horizontal_wind:
+  description: Marine surface horizontal wind speed
+  components:
+    - marine_sfc_u_wind_component
+    - marine_sfc_v_wind_component
